Remove symfony/finder dependency

--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
   },
   "require": {
     "composer-plugin-api": "^1.1",
-    "composer/composer": "^1.4",
-    "symfony/finder": "^3.3"
+    "composer/composer": "^1.4"
   },
   "extra": {
     "class": "Pasinter\\Composer\\Migrations\\PackageMigrationsPlugin"
