--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     }
   },
   "require": {
-    "composer-plugin-api": "^1.1",
-    "composer/composer": "^1.4"
+    "composer-plugin-api": "^1.1"
   },
   "extra": {
     "class": "Pasinter\\Composer\\Migrations\\PackageMigrationsPlugin"
